--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Surface</title>
+    <meta name="viewport" content="width=device-width">
     <link href="styles/styles.css" rel="stylesheet">
 </head>
 <body>
